fix skills caption alignment

--- a/src/sections/about.module.scss
+++ b/src/sections/about.module.scss
@@ -1,11 +1,13 @@
 .skill {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
 }
 .caption {
   font-size: 14px;
   text-align: center;
   position: absolute;
+  width: 110px;
+  height: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
